--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@ body {
 header {
 	width: 100%;
 	background: white;
-	padding: 1% 10%;
-	padding-bottom: 0;
+	padding: 0% 10%;
 	box-shadow: 1px 1px 8px 1px rgba(0,0,0,0.3);
 }
 
@@ -25,21 +24,36 @@ header .headerTop{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-direction: column;
+	position: absolute;
+	left: 0px;
+	top: calc((100vh - 200px)/2);
+	background: white;
+	border-radius: 5px;
 }
 
 
 
 header .headerTop .sosial {
 	display: flex;
-	justify-content: flex-end;
-	width: 43%;
+	padding: 10px;
+
+	justify-content: center;
+	width: 100%;
+	align-items: space-between;
+	flex-direction: column;
+	/*height: vh;*/
+	box-shadow:1px 1px 8px 1px rgba(0,0,0,0.1);
+	/*border-right: 1px solid gray;*/
+	/*background: red;*/
+	/*gap:10px;*/
 	/*background: red;*/
 }
 
-header .headerTop .sosialRight{
+/*header .headerTop .sosialRight{
 	justify-content: flex-start;
 }
-
+*/
 header .headerTop .sosial a {
 	width: 40px;
 	height: 40px;
@@ -50,7 +64,8 @@ header .headerTop .sosial a {
 	align-items: center;
 	text-decoration: none;
 	font-weight: 900;
-	margin: 0 5%;
+	margin: 10px 5%;
+	align-self: center;
 }
 
 header .headerTop .sosial .whatsapp {
@@ -99,54 +114,48 @@ header .headerTop .sosial a i:hover {
 	}
 }
 
-header .headerTop .logo {
-	width: 80px;
-	height: 80px;
+header .header .logo {
+	width: 100px;
+	/*height: 80px;*/
 	border-radius: 50%;
 	/*border: 1px solid gray;*/
-	overflow: hidden;
+	/*overflow: hidden;*/
 	/*background: url("../img/logo2.png");*/
 	background-size: cover; 
 }
 
-header .headerTop .logo img {
+header .header .logo img {
 	width: 100%;
-	/*border-radius: 50%;*/
-	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-	box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
-
 }
 
 header .header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	width: 100%;
 }
 
- header .header {
-	border-top:1px solid gray;
-	margin-top: 1%;
-}
 
- header .header a {
- 	width: calc(100%/5);
+ header .header > a {
+ 	width: calc((100%)/6);
  	display: flex;
  	justify-content: center;
  	align-items: center;
  	color:black;
  	font-weight: 900;
  	padding: 1%;
+ 	/*height: 80px;*/
  	/*font-size: 1.2rem;*/
- 	border-bottom: 2px solid white;
+ 	/*border-bottom: 3px solid white;*/
  }
 
 header .header .pageActive{
-	border-bottom: 2px solid green;
-	background: rgba(0,0,0,0.03);
+	/*border-bottom: 3px solid green;*/
+	color: gray;
 }
 
-header .header a:hover {
- 	border-bottom: 2px solid green;
-	background: rgba(0,0,0,0.05);
-		
+header .header>a:hover {
+ 	/*border-bottom: 3px solid green;*/
+	color: gray;
+
   }
