--- a/css/style1.css
+++ b/css/style1.css
@@ -2,7 +2,10 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family:font-family: Gill Sans Extrabold, sans-serif;
+	margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+      'Segoe UI Symbol';
 	font-size: 1rem;
 }
 
@@ -11,6 +14,7 @@ body {
 	width: 100%;
 	position: relative;
 	background-color: #eee;
+	margin: auto auto;
 }
 
 header {
@@ -58,6 +62,15 @@ header .headerTop .sosial a {
 	font-weight: 900;
 	margin: 10px 5%;
 	align-self: center;
+	transition: 0.6s;
+
+}
+
+
+header .headerTop .sosial .sosActive {
+	transition: 0.6s;
+	transform: scale(1.15);
+	font-size: 1.5rem;
 }
 
 header .headerTop .sosial .whatsapp {
@@ -148,8 +161,8 @@ header .header>a:hover {
 .slideshow-container {
   width: 100%;
   position: relative;
-  margin: auto;
-  max-height: 70vh;
+/*  margin: auto;*/
+  max-height: 80vh;
   overflow: hidden;
 
 }
@@ -241,16 +254,18 @@ section {
 	align-items: flex-start;
 	flex-wrap: wrap;
 	background: white;
+	padding: 2% 0%;
+}
+
+section h3 {
+	text-align: center;
+	font-size: 1.3rem;
+	width: 100%;
+	margin-bottom: 2%;
 }
 
 /*Tours start*/
-.tour h2 {
-	width: 100%;
-	margin: 2%;
-}
-.tour h2 center {
-	font-size: 1.4rem;
-}
+
 .tour .block1 {
 	background: white;
 	padding: 1%;
@@ -279,7 +294,18 @@ section {
 	height: 100%;
 	border-radius: 10px;
 	box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
+
 }
+
+.tour > div .img img {
+	transition: 0.6s;
+}
+
+.tour > div .img:hover img {
+	transition: 0.6s;
+	transform: scale(1.1);
+}
+
 .tour .block1 .info {
 	width: 60%;
 }
@@ -307,14 +333,18 @@ section {
 background: linear-gradient(90deg, rgba(33,128,250,1) 0%, rgba(11,167,217,1) 100%, rgba(103,230,49,1) 100%);
 	box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.1);
 	color: white;
-	transition: 0.5s;
 	
+}
+
+.tour  div .info p a {
+	transition: 0.6s;
+
 }
 
 .tour .block1 .info p a:hover {
 	background: white;
 	color: rgba(33,128,250,1);
-	transition: 0.5s;
+	transition: 0.6s;
 }
 .tour .block1 .info p span {
 	font-weight: 700;
@@ -342,8 +372,8 @@ background: linear-gradient(90deg, rgba(33,128,250,1) 0%, rgba(11,167,217,1) 100
 
 .tour .block2 .img img {
 	position: absolute;
-	top: -25px;
-	left: -30px;
+	top: -15px;
+	left: -15px;
 	width: 100%;
 	max-height: 100%;
 	min-height: 150px;
@@ -465,5 +495,170 @@ background: linear-gradient(90deg, rgba(33,128,250,1) 0%, rgba(11,167,217,1) 100
 }
 
 
+.tour .videoInfo {
+	width: 82%;
+	margin: 1% 9%;
+	background: #eee;
+	display: flex;
+	align-items: flex-start;
+	background: white;
+	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+}
 
+.tour .videoInfo .video {
+	width: 50%;
+	padding: 1%;
+}
+
+.tour .videoInfo .info {
+	width: 49%;
+	padding: 1%;
+}
+
+.tour .videoInfo .info h3 {
+	font-size: 1.2rem;
+	margin-bottom: 1%;
+}
+
+.tour > div {
+	border-radius: 8px;
+}
 /*Tours end*/
+
+
+/*Card start*/
+.slide-container{
+  max-width: 100%;
+  width: 90%;
+  padding: 40px 0;
+  margin: 1% 5%;
+}
+.slide-content{
+  margin: 0 40px;
+  overflow: hidden;
+  border-radius: 25px;
+}
+.card{
+  border-radius: 25px;
+  background-color: #FFF;
+}
+.image-content,
+.card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 14px;
+}
+.image-content{
+  position: relative;
+  row-gap: 5px;
+  padding: 25px 0;
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #4070F4;
+  border-radius: 25px 25px 0 25px;
+}
+.overlay::before,
+.overlay::after{
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  background-color: #4070F4;
+}
+.overlay::after{
+  border-radius: 0 25px 0 0;
+  background-color: #FFF;
+}
+.card-image{
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background: #FFF;
+  padding: 3px;
+}
+.card-image .card-img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #4070F4;
+}
+.name{
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.description{
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
+.button{
+  border: none;
+  font-size: 16px;
+  color: #FFF;
+  padding: 8px 16px;
+  background-color: #4070F4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover{
+  background: #265DF2;
+}
+.swiper-navBtn{
+  color: #6E93f7;
+  transition: color 0.3s ease;
+}
+.swiper-navBtn:hover{
+  color: #4070F4;
+}
+.swiper-navBtn::before,
+.swiper-navBtn::after{
+  font-size: 35px;
+}
+.swiper-button-next{
+  right: 0;
+}
+.swiper-button-prev{
+  left: 0;
+}
+.swiper-pagination-bullet{
+  background-color: #6E93f7;
+  opacity: 1;
+}
+.swiper-pagination-bullet-active{
+  background-color: #4070F4;
+}
+@media screen and (max-width: 768px) {
+  .slide-content{
+    margin: 0 10px;
+  }
+  .swiper-navBtn{
+    display: none;
+  }
+}
+/*Card end*/
+
+footer	{
+	width: 100%;
+	background: white;
+	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+	padding: 2%;
+}
+
+footer h3 {
+	text-align: center;
+	font-weight: 100;
+
+}
